--- a/index.html
+++ b/index.html
@@ -12,70 +12,110 @@
       crossorigin="anonymous"
     />
     <!-- CSS Main -->
-    
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
-    <header class="row">
-      <section class="col-12">
-
+  <body class="row d-flex justify-content-center">
+    <!-- Header -->
+    <header class="row d-flex justify-content-center sticky-top">
+      <section class="col-12 custom-section-header">
         <nav class="navbar navbar-dark bg-secondary">
           <div class="container-fluid d-flex justify-content-end">
             <div class="col-2 text-end">Bermudez</div>
             <div class="col-6 d-flex justify-content-center">
-           <ul class="col-10 d-flex justify-content-evenly">
-            <li>Home</li>
-            <li>About</li>
-            <li>Resume</li>
-            <li>Portfolio</li>
-            <li>Contact</li>
-            <li class="text-warning">+1 754 715 8059</li>
-           </ul>
-          </div>
-        
-         <div class="col-3 d-flex justify-content-end">
-            <button id="nav-bar-menu" class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+              <ul class="col-10 d-flex justify-content-evenly">
+                <li>Home</li>
+                <li>About</li>
+                <li>Resume</li>
+                <li>Portfolio</li>
+                <li>Contact</li>
+                <li class="text-warning">+1 754 715 8059</li>
+              </ul>
+            </div>
+
+            <div class="col-3 d-flex justify-content-end">
+              <button
+                id="nav-bar-menu"
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar"
+                aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div
+              class="offcanvas offcanvas-end text-bg-dark"
+              tabindex="-1"
+              id="offcanvasDarkNavbar"
+              aria-labelledby="offcanvasDarkNavbarLabel"
+            >
               <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
+                  Dark offcanvas
+                </h5>
+                <button
+                  type="button"
+                  class="btn-close btn-close-white"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
               </div>
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >Home</a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="#"
+                      role="button"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                    >
                       Dropdown
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark">
                       <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li>
-                        <hr class="dropdown-divider">
+                        <a class="dropdown-item" href="#">Another action</a>
                       </li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li>
+                        <hr class="dropdown-divider" />
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >Something else here</a
+                        >
+                      </li>
                     </ul>
                   </li>
                 </ul>
                 <form class="d-flex mt-3" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <input
+                    class="form-control me-2"
+                    type="search"
+                    placeholder="Search"
+                    aria-label="Search"
+                  />
                   <button class="btn btn-success" type="submit">Search</button>
                 </form>
               </div>
             </div>
           </div>
         </nav>
-  </section>
-  </header>
-    <!-- Small-Img -->
+      </section>
+    </header>
+
+    <!-- Landing img -->
     <article
       class="row bg-dark d-flex justify-content-center custom-container-hero"
     >
@@ -112,10 +152,269 @@
         </div>
       </section>
     </article>
+    <!-- Main -->
+    <main class="col-9">
+      <br />
+      <section class="row">
+        <!-- About Me -->
+        <div class="col-12 text-center text-warning">
+          <h1>About Me</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="col-12 d-flex justify-content-evenly">
+            <div class="col-6 d-flex justify-content-end">
+              <div class="custom-img-half-face-bg">
+                <img src="./assets/images/half-head-left.png" alt="" />
+              </div>
+            </div>
+            <div class="col-6">
+              <h1>Hi There! I'm Julio Bermudez</h1>
+              <h5 class="text-warning">Visual designer</h5>
+              <p>
+                I am a Visual Designer with a strong focus on digital branding.
+                Visul design seeks to attract, inspire, create desires and
+                motivate people to respond to messages, with a view to making a
+                favorable impact.
+              </p>
+              <ul>
+                <li>Birthday: Aug 08, 1990</li>
+                <li>Phone: +1 754 715 8059</li>
+                <li>Email: julioph0n3@gmail.com</li>
+                <li>From: 576 Nw 114th Ave</li>
+                <li>Languaje: English, Spanish</li>
+                <li>Freelance: Available</li>
+              </ul>
+              <button class="download-btn">Download CV</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <br />
+      <!-- Why Choose Me -->
+      <div class="col-12 text-center text-warning">
+        <h1>Why Choose Me</h1>
+        <h6>My Experience Area</h6>
+      </div>
 
-    <!-- Seccion Prueba -->
+      <article class="row d-flex justify-content-center">
+        <section class="col-6">
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>HTML</h6>
+              <h6>98%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 98%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>CSS</h6>
+              <h6>90%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 90%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>JavaScript</h6>
+              <h6>85%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 85%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>Content Writing</h6>
+              <h6>95%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 95%"
+              ></div>
+            </div>
+          </div>
+        </section>
+        <section class="col-6">
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>Node.Js</h6>
+              <h6>80%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 80%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>Web Design</h6>
+              <h6>96%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 96%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>Web UI Design</h6>
+              <h6>49%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 49%"
+              ></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="d-flex justify-content-between">
+              <h6>jQuery</h6>
+              <h6>89%</h6>
+            </div>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Animated striped example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                style="width: 89%"
+              ></div>
+            </div>
+          </div>
+        </section>
+        <!-- Seccion Prueba -->
+      </article>
+      <br />
+      <!-- Portfolio -->
+      <article class="row">
+        <div class="col-12 d-flex justify-content-center">
+          <h1 class="text-warning">Portfolio</h1>
+        </div>
+        <div class="col-12 d-flex flex-wrap justify-content-center">
+          <div class="col-4 p-3 custom-div-img-portfolio">
+            <img src="./assets/images/IMG-2858.jpg" alt="" />
+          </div>
+          <div class="col-4 p-3 custom-div-img-portfolio">
+            <img src="./assets/images/IMG-2858.jpg" alt="" />
+          </div>
+          <div class="col-4 p-3 custom-div-img-portfolio">
+            <img src="./assets/images/IMG-2858.jpg" alt="" />
+          </div>
+          <div class="col-4 p-3 custom-div-img-portfolio">
+            <img src="./assets/images/IMG-2858.jpg" alt="" />
+          </div>
+          <div class="col-4 p-3 custom-div-img-portfolio">
+            <img src="./assets/images/IMG-2858.jpg" alt="" />
+          </div>
+          <div class="col-4 p-3 custom-div-img-portfolio">
+            <img src="./assets/images/IMG-2858.jpg" alt="" />
+          </div>
+        </div>
+      </article>
 
-    <!-- FIN Seccioon Prueba -->
+
+      <!-- Section Prueba -->
+        <article class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <h1 class="text-warning">Contact Me</h1>
+          </div>
+          <section class="col-12">
+            <div class="col-6">
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Your Name" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+            </div>
+
+            <div class="col-6">
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Your Email" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+            </div>
+
+            <div class="col-6">
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Your Subject" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+            </div>
+
+            <div class="input-group">
+              <textarea class="form-control" placeholder="Your Message" aria-label="Your Message" ></textarea>
+            </div>
+          </section>
+        </article>
+      <!-- FIN Seccioon Prueba -->
+    </main>
     <!-- 
     <section class="row">
       <div class="col-6">
@@ -227,13 +526,13 @@
     ></script>
     <!-- JQuery -->
     <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+      integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- Jquery Ripples -->
-   
+
     <!-- JavaScript Main -->
     <script src="./assets/js/jquery.js"></script>
   </body>
