--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="col-12 d-flex justify-content-evenly">
-            <div class="col-6 d-flex justify-content-end">
+            <div class="col-5 d-flex justify-content-end">
               <div class="custom-img-half-face-bg">
                 <img src="./assets/images/half-head-left.png" alt="" />
               </div>
@@ -115,17 +115,23 @@
               <h5 class="text-warning">Visual designer</h5>
               <p>
                 I am a Visual Designer with a strong focus on digital branding.
-                Visul design seeks to attract, inspire, create desires and
-                motivate people to respond to messages, with a view to making a
+                 Visual design seeks to attract, inspire, create desires and
+                  motivate people to
+               respond to messages, with a view to making a
                 favorable impact.
               </p>
               <ul>
-                <li>Birthday: Aug 08, 1990</li>
-                <li>Phone: +1 754 715 8059</li>
-                <li>Email: julioph0n3@gmail.com</li>
-                <li>From: 576 Nw 114th Ave</li>
-                <li>Languaje: English, Spanish</li>
-                <li>Freelance: Available</li>
+                <li>Birthday : Aug 08, 1990 </li>
+                <br>
+                <li>Phone : +1 754 715 8059</li>
+                <br>
+                <li>Email : julioph0n3@gmail.com</li>
+                <br>
+                <li>From : 576 Nw 114th Ave</li>
+                <br>
+                <li>Languaje : English, Spanish</li>
+                <br>
+                <li>Freelance : Available</li>
               </ul>
               <button class="download-btn">Download CV</button>
             </div>
