done responsive web page'

--- a/perfection.html
+++ b/perfection.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-color">
     <!-- Header -->
-    <header class="row sticky-top opacity-75 position-relative bg-color">
+    <header class="row sticky-top opacity-75  bg-color">
       <section
         class="col-12 d-flex justify-content-center text position-absolute"
       >
@@ -172,9 +172,8 @@
         </h1>
       </article>
     </section>
-
     <section class="row d-flex justify-content-center">
-      <div class="col-sm-12 col-lg-8 d-flex flex-wrap justify-content-evenly">
+      <div class="col-sm-12 col-lg-9 d-flex flex-wrap justify-content-evenly">
         <section class="col-10 col-sm-10 col-lg-5">
           <!-- 1 -->
           <div class="col-12 d-flex justify-content-between white">
@@ -333,9 +332,191 @@
         </section>
       </div>
     </section>
-    <!-- Test Field -->
 
-    <!-- End Test Field -->
+    <div class="container-div"></div>
+
+    <!-- Portfolio -->
+    <section class="row">
+      <article class="col-12 text-center custom-text-title">
+        <h1 class="warning">
+          PORTFOLIO
+          <h1 class="shadow-text opacity-25 position-relative">PORTFOLIO</h1>
+        </h1>
+      </article>
+
+      <section class="row d-flex justify-content-center">
+        <article
+          class="col-sm-12 col-lg-9 d-flex justify-content-center justify-content-evenly flex-wrap custom-portfolio"
+        >
+          <div
+            class="col-10 col-sm-10 col-lg-12"
+            style="margin-bottom: 30px; height: 300px"
+          >
+            <img
+              src="https://elements-cover-images-0.imgix.net/5e9e5ac6-0af0-4bf4-9cc8-ceaf6afca7e6?auto=compress%2Cformat&fit=max&w=1370&s=449d34fd8f969758445b251800abb996"
+              alt=""
+            />
+          </div>
+          <div
+            class="col-10 col-sm-10 col-lg-4"
+            style="margin-bottom: 30px; height: 300px"
+          >
+            <img
+              src="https://elements-cover-images-0.imgix.net/265ee29e-2b82-4e71-94e6-fd545ccabe14?auto=compress%2Cformat&fit=max&w=1370&s=b1bec7556a644f7bfe01cd51b305de9b"
+              alt=""
+            />
+          </div>
+          <div
+            class="col-10 col-sm-10 col-lg-7"
+            style="margin-bottom: 30px; height: 300px"
+          >
+            <img
+              src="https://elements-cover-images-0.imgix.net/1e33719b-4f0e-403f-929a-108c81070efd?auto=compress%2Cformat&fit=max&w=1370&s=a3ab018d07e59ba4220ef7d89041369c"
+              alt=""
+            />
+          </div>
+          <div
+            class="col-10 col-sm-10 col-lg-7"
+            style="margin-bottom: 30px; height: 300px"
+          >
+            <img
+              src="https://elements-cover-images-0.imgix.net/ece070d5-ca62-424f-a5cf-309eb2419474?auto=compress%2Cformat&fit=max&w=1370&s=6492562f29b6971c5031df85b5eb85ab"
+              alt=""
+            />
+          </div>
+          <div
+            class="col-10 col-sm-10 col-lg-4"
+            style="margin-bottom: 30px; height: 300px"
+          >
+            <img
+              src="https://elements-cover-images-0.imgix.net/70266ea4-4eee-4566-b4c5-2cce1b593bc8?auto=compress%2Cformat&fit=max&w=1370&s=78ad857fb00785ebcc263a18230bedb2"
+              alt=""
+            />
+          </div>
+        </article>
+      </section>
+    </section>
+
+    <div class="container-div"></div>
+
+    <!-- Contact me -->
+    <article class="col-12 text-center custom-text-title">
+      <h1 class="warning">
+        CONTACT ME
+        <h1 class="shadow-text opacity-25 position-relative">CONTACT ME</h1>
+      </h1>
+    </article>
+
+    <section class="row d-flex justify-content-center">
+      <div class="col-sm-12 col-lg-9 d-flex flex-wrap justify-content-evenly">
+        <section class="col-10 col-sm-10 col-lg-5">
+          <h2 class="white">Just Say Hello!</h2>
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label"></label>
+            <input
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput"
+              placeholder="Your Name"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput2" class="form-label"></label>
+            <input
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput2"
+              placeholder="Your Email"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label"></label>
+            <input
+              type="text"
+              class="form-control"
+              id="formGroupExampleInput3"
+              placeholder="Your Subject"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"></label>
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+              placeholder="Your Message"
+            ></textarea>
+          </div>
+
+          <button class="btn" style="margin-bottom: 50px;" ><span>Send Message</span></button>
+        </section>
+
+        <section class="col-10 col-sm-10 col-lg-5">
+          <h2 class="white" style="margin-bottom: 30px">Just Say Hello!</h2>
+          <div class="col-12 grey" style="margin-bottom: 30px">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi unde
+              nobis consectetur aliquid obcaecati rerum quod odio eaque
+              blanditiis eum vitae aut, dolor et non.
+            </p>
+          </div>
+          <div
+            class="col-12 d-flex flex-wrap justify-content-between white"
+            style="margin-bottom: 30px"
+          >
+            <i
+              class="fa-solid fa-envelope fa-2xl col-1"
+              style="color: #fdfeff; margin-top: 10px"
+            ></i>
+            <h5 class="col-3">Email:</h5>
+            <h6 class="col-7 grey" style="margin-top: 3px">
+              julioph0n3@gmail.com
+            </h6>
+          </div>
+          <div
+            class="col-12 d-flex flex-wrap justify-content-between white"
+            style="margin-bottom: 30px"
+          >
+            <i
+              class="fa-solid fa-phone fa-2xl col-1"
+              style="color: #fdfeff; margin-top: 10px"
+            ></i>
+            <h5 class="col-3">Phone:</h5>
+            <h6 class="col-7 grey" style="margin-top: 3px">+1 754 715 8059</h6>
+          </div>
+          <div
+            class="col-12 d-flex flex-wrap justify-content-between white"
+            style="margin-bottom: 5px"
+          >
+            <i
+              class="fa-solid fa-location-dot fa-2xl col-1"
+              style="color: #fdfeff; margin-top: 10px"
+            ></i>
+            <h5 class="col-3">Location:</h5>
+            <h6 class="col-7 grey" style="margin-top: 3px">
+              576 Nw 114th Ave, Fontainebleau, FL 33172
+            </h6>
+          </div>
+          <div class="col-12 d-flex flex-wrap justify-content-center white">
+            <h5 class="col-12" style="margin-bottom: 30px">
+              Visite my social profile and get connected
+            </h5>
+            <i
+              class="fa-brands fa-square-github fa-xl col-2"
+              style="color: #fdfeff"
+            ></i>
+            <i
+              class="fa-brands fa-linkedin-in fa-xl col-2"
+              style="color: #fdfeff"
+            ></i>
+            <i
+              class="fa-brands fa-facebook-f fa-xl col-2"
+              style="color: #fdfeff"
+            ></i>
+          </div>
+        </section>
+      </div>
+    </section>
 
     <!-- Script -->
     <!-- Bootstrap -->
