fixed bug in count numbers

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     />
     <!-- Css Main -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/perfection.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="bg-color">
     <!-- Header -->
-    <header class="row sticky-top opacity-75  bg-color">
+    <header class="row sticky-top opacity-75 bg-color">
       <section
         class="col-12 d-flex justify-content-center text position-absolute"
       >
@@ -123,13 +123,13 @@
           class="col-sm-12 col-lg-8 d-flex justify-content-evenly flex-wrap custom-container-about-me"
         >
           <picture
-            class="col-sm-12 col-lg-6 d-flex justify-content-center opacity-25"
+            class="col-sm-12 col-lg-6 d-flex justify-content-center opacity-25 picMovmnt"
           >
-            <div class="custom-avatar-img-half-face">
+            <div class="custom-avatar-img-profile">
               <img src="./assets/images/IMG-2859.jpg" alt="avatar image" />
             </div>
           </picture>
-          <article class="col-sm-11 col-md-8 col-lg-6">
+          <article class="col-sm-11 col-md-8 col-lg-6 artclMovmnt">
             <h1 class="white mb-3">Hi there!, I am J. Bermudez</h1>
             <h4 class="warning mb-3">Visual Designer</h4>
 
@@ -172,13 +172,14 @@
         </h1>
       </article>
     </section>
-    <section class="row d-flex justify-content-center">
+    <section class="row d-flex justify-content-center skills">
       <div class="col-sm-12 col-lg-9 d-flex flex-wrap justify-content-evenly">
         <section class="col-10 col-sm-10 col-lg-5">
           <!-- 1 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">HTML</h6>
+            <h6 class="text-end col-2" id="num0" data-count="94"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -190,14 +191,15 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
           <!-- 2 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">JQuery</h6>
+            <h6 class="text-end col-2" id="num1" data-count="92"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -209,14 +211,15 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
           <!-- 3 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">Node.Js</h6>
+            <h6 class="text-end col-2" id="num2" data-count="78"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -228,14 +231,15 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
           <!-- 4 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">Bootstrap</h6>
+            <h6 class="text-end col-2" id="num3" data-count="84"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -247,16 +251,17 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
         </section>
         <section class="col-10 col-sm-10 col-lg-5">
           <!-- 1 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">UX and UI Design</h6>
+            <h6 class="text-end col-2" id="num4" data-count="89"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -268,14 +273,15 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
           <!-- 2 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">CSS</h6>
+            <h6 class="text-end col-2" id="num5" data-count="98"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -287,14 +293,15 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
           <!-- 3 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">Git</h6>
+            <h6 class="text-end col-2" id="num6" data-count="83"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -306,14 +313,15 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
           <!-- 4 -->
-          <div class="col-12 d-flex justify-content-between white">
-            <h6>HTML</h6>
-            <h6>98%</h6>
+          <div class="col-12 d-flex white">
+            <h6 class="col-10">Problem-solving</h6>
+            <h6 class="text-end col-2" id="num7" data-count="75"></h6>
+            <h6 class="col-1">%</h6>
           </div>
           <div
             class="progress"
@@ -325,8 +333,8 @@
             style="height: 5px; margin-bottom: 10px"
           >
             <div
-              class="progress-bar progress-bar-striped progress-bar-animated"
-              style="width: 75%"
+              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+              style="width: 50%"
             ></div>
           </div>
         </section>
@@ -448,7 +456,9 @@
             ></textarea>
           </div>
 
-          <button class="btn" style="margin-bottom: 50px;" ><span>Send Message</span></button>
+          <button class="btn" style="margin-bottom: 50px">
+            <span>Send Message</span>
+          </button>
         </section>
 
         <section class="col-10 col-sm-10 col-lg-5">
@@ -538,8 +548,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <!-- Jquery Ripples -->
-    <script src="./assets/js/jquery.ripples-min.js"></script>
+    <script src="./assets/js/jquery.ripples.js"></script>
     <!-- JavaScript Main -->
-    <script src="./assets/js/perfection.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
