--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           class="col-sm-12 col-lg-8 d-flex justify-content-evenly flex-wrap custom-container-about-me"
         >
           <picture
-            class="col-sm-12 col-lg-6 d-flex justify-content-center opacity-25 picMovmnt"
+            class="col-sm-12 col-lg-6 d-flex justify-content-center opacity-50 picMovmnt"
           >
             <div class="custom-avatar-img-profile">
               <img src="./assets/images/IMG-2859.jpg" alt="avatar image" />
@@ -190,8 +190,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar0"
+              class="progress-bar progress-bar-striped progress-bar-animated "
               style="width: 50%"
             ></div>
           </div>
@@ -210,8 +210,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar1"
+              class="progress-bar progress-bar-striped progress-bar-animated"
               style="width: 50%"
             ></div>
           </div>
@@ -230,8 +230,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar2"
+              class="progress-bar progress-bar-striped progress-bar-animated "
               style="width: 50%"
             ></div>
           </div>
@@ -250,8 +250,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar3"
+              class="progress-bar progress-bar-striped progress-bar-animated "
               style="width: 50%"
             ></div>
           </div>
@@ -272,8 +272,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar4"
+              class="progress-bar progress-bar-striped progress-bar-animated"
               style="width: 50%"
             ></div>
           </div>
@@ -292,8 +292,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar5"
+              class="progress-bar progress-bar-striped progress-bar-animated"
               style="width: 50%"
             ></div>
           </div>
@@ -312,8 +312,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar6"
+              class="progress-bar progress-bar-striped progress-bar-animated "
               style="width: 50%"
             ></div>
           </div>
@@ -332,8 +332,8 @@
             aria-valuemax="100"
             style="height: 5px; margin-bottom: 10px"
           >
-            <div
-              class="progress-bar progress-bar-striped progress-bar-animated movement-bar"
+            <div id="bar7"
+              class="progress-bar progress-bar-striped progress-bar-animated"
               style="width: 50%"
             ></div>
           </div>
@@ -528,6 +528,13 @@
       </div>
     </section>
 
+
+
+
+
+
+
+
     <!-- Script -->
     <!-- Bootstrap -->
     <script
@@ -547,6 +554,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!-- JQuery animation -->
+    <script src="./assets/js/jquery.animations-tile.min.js"></script>
     <!-- Jquery Ripples -->
     <script src="./assets/js/jquery.ripples.js"></script>
     <!-- JavaScript Main -->
