added links to web sites

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
   </head>
   <body class="bg-color">
     <!-- Header -->
-    <header class="row sticky-top opacity-75 bg-color" >
+    <header class="row sticky-top  bg-color" >
       <section
         class="col-12 d-flex justify-content-center text position-absolute"
       >
         <div class="col-12">
           <nav class="navbar navbar-expand-lg custom-nav-bar d-flex flex-wrap">
             <div class="container-fluid">
-              <div class="col-lg-4 col-xl-4 col-xxl-5">
-                <a class="navbar-brand" href="#"
-                  ><i class="fa-brands warning fa-black-tie fa-2xl"></i
-                  ><span class="white"> J.Bermudez</span></a
+              <div class="navbar-brand col-lg-4 col-xl-3 col-xxl-4 p-2">
+                <div style="width: 50px;">
+                <a  href="#"
+                  ><img src="./assets/images/Gold Icon Tie.I01.2k.png" alt=""></a
                 >
+              </div>
               </div>
               <button
                 class="navbar-toggler"
@@ -79,7 +80,7 @@
             </div>
 
             <div class="col-12 text-center custom-greetings container">
-              <h1>Hi, I am <span>J.Bermudez</span></h1>
+              <h1>Hi, I am <span class="water">J.Bermudez</span></h1>
             </div>
 
             <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-9 col-xxl-8 text-center container">
@@ -132,16 +133,16 @@
           <article
             class="col-sm-11 col-md-8 col-lg-6 artclMovmnt custom-avatar-img-profile"
           >
-            <h1 class="white mb-3">Hi there!, I am J. Bermudez</h1>
+            <h1 class="white mb-3 mt-4">Hi there!, I am J. Bermudez</h1>
             <h4 class="warning mb-3">Visual Designer</h4>
 
             <p class="grey">
-              I am a Visual Designer with a strong focus on digital branding.
-              Visul design seeks to attract, inspire, create desires and
+              I am a Visual Designer with a strong focus on digital branding. My
+              visual designs seeks to attract, inspire, create desires and
               motivate people to respond to messages, with a view to making a
               favorable impact.
             </p>
-
+            <br>
             <ul class="grey">
               <li>Birthday : Aug 08, 1990</li>
               <br />
@@ -153,8 +154,9 @@
               <br />
               <li>Languaje : English, Spanish</li>
               <br />
-              <li>Freelance : Available</li>
+              <li>Freelance : <span class="warning">Available</span></li>
             </ul>
+            <br>
             <div class="col-sm-12 d-flex justify-content-center">
               <button class="btn"><span>Download CV</span></button>
             </div>
@@ -163,7 +165,7 @@
       </section>
     </section>
 
-    <div class="container-div"></div>
+    <div class="container-div custom-hide-div"></div>
 
     <!-- My Skills -->
     <section class="row" id="skills">
@@ -190,7 +192,7 @@
             aria-valuenow="75"
             aria-valuemin="0"
             aria-valuemax="100"
-            style="height: 5px; margin-bottom: 10px"
+            style="height: 5px; margin-bottom: 10px;"
           >
             <div
               id="bar0"
