--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-color">
     <!-- Header -->
-    <header class="row sticky-top  bg-color" >
+    <header class="row sticky-top bg-color">
       <section
         class="col-12 d-flex justify-content-center text position-absolute"
       >
@@ -25,11 +25,11 @@
           <nav class="navbar navbar-expand-lg custom-nav-bar d-flex flex-wrap">
             <div class="container-fluid">
               <div class="navbar-brand col-lg-4 col-xl-3 col-xxl-4 p-2">
-                <div style="width: 50px;">
-                <a  href="#"
-                  ><img src="./assets/images/Gold Icon Tie.I01.2k.png" alt=""></a
-                >
-              </div>
+                <div style="width: 50px">
+                  <a href="#"
+                    ><img src="./assets/images/Gold Icon Tie.I01.2k.png" alt=""
+                  /></a>
+                </div>
               </div>
               <button
                 class="navbar-toggler"
@@ -83,23 +83,35 @@
               <h1>Hi, I am <span class="water">J.Bermudez</span></h1>
             </div>
 
-            <div class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-9 col-xxl-8 text-center container">
+            <div
+              class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-9 col-xxl-8 text-center container"
+            >
               <p class="">
                 I am a frontend web developer. I can provide clean code and
-                pixel perfect design.
-                I also make website more & more interactive with web animations.
+                pixel perfect design. I also make website more & more
+                interactive with web animations.
               </p>
             </div>
             <div class="d-flex justify-content-center custom-container-icons">
               <div class="col-3 d-flex justify-content-evenly">
                 <div class="col-2 custom-responsive-icons">
-                  <a href="https://github.com/JulioBermudez" class="white"><i class="fa-brands fa-github fa-2xl"></i></a>
+                  <a href="https://github.com/JulioBermudez" class="white"
+                    ><i class="fa-brands fa-github fa-2xl"></i
+                  ></a>
                 </div>
                 <div class="col-2 white custom-responsive-icons">
-                  <a href="https://www.linkedin.com/in/julio-bermudez-4b3742251/" class="white"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/julio-bermudez-4b3742251/"
+                    class="white"
+                    ><i class="fa-brands fa-linkedin fa-2xl"></i
+                  ></a>
                 </div>
                 <div class="col-2 white custom-responsive-icons">
-                  <a href="https://www.facebook.com/profile.php?id=100008852680959&mibextid=LQQJ4d" class="white"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=100008852680959&mibextid=LQQJ4d"
+                    class="white"
+                    ><i class="fa-brands fa-facebook fa-2xl"></i
+                  ></a>
                 </div>
               </div>
             </div>
@@ -142,7 +154,7 @@
               motivate people to respond to messages, with a view to making a
               favorable impact.
             </p>
-            <br>
+            <br />
             <ul class="grey">
               <li>Birthday : Aug 08, 1990</li>
               <br />
@@ -156,9 +168,11 @@
               <br />
               <li>Freelance : <span class="warning">Available</span></li>
             </ul>
-            <br>
+            <br />
             <div class="col-sm-12 d-flex justify-content-center">
-              <button class="btn"><span>Download CV</span></button>
+              <button class="btn" id="btnResume">
+                <span>WATCH MY CV</span>
+              </button>
             </div>
           </article>
         </div>
@@ -192,7 +206,7 @@
             aria-valuenow="75"
             aria-valuemin="0"
             aria-valuemax="100"
-            style="height: 5px; margin-bottom: 10px;"
+            style="height: 5px; margin-bottom: 10px"
           >
             <div
               id="bar0"
@@ -429,7 +443,7 @@
 
     <section class="row d-flex justify-content-center">
       <div class="col-sm-12 col-lg-9 d-flex flex-wrap justify-content-evenly">
-        <section class="col-10 col-sm-10 col-lg-5">
+        <form class="col-10 col-sm-10 col-lg-5">
           <h2 class="white">Just Say Hello!</h2>
           <div class="mb-3">
             <label for="formGroupExampleInput" class="form-label"></label>
@@ -468,10 +482,10 @@
             ></textarea>
           </div>
 
-          <button class="btn" style="margin-bottom: 50px">
-            <span>Send Message</span>
+          <button class="btn" type="submit" id="btnSubmitEmail" style="margin-bottom: 50px">
+            <span><a href="mailto: julioph0n3@gmail.com">Send Message</a></span>
           </button>
-        </section>
+        </form>
 
         <section class="col-10 col-sm-10 col-lg-5">
           <h2 class="white" style="margin-bottom: 30px">Just Say Hello!</h2>
@@ -523,16 +537,26 @@
             <h5 class="col-12" style="margin-bottom: 30px">
               Visite my social profile and get connected
             </h5>
-            
+
             <div class="col-8 d-flex justify-content-evenly">
               <div class="col-2 custom-responsive-icons">
-                <a href="https://github.com/JulioBermudez" class="white"><i class="fa-brands fa-github fa-2xl"></i></a>
+                <a href="https://github.com/JulioBermudez" class="white"
+                  ><i class="fa-brands fa-github fa-2xl"></i
+                ></a>
               </div>
               <div class="col-2 white custom-responsive-icons">
-                <a href="https://www.linkedin.com/in/julio-bermudez-4b3742251/" class="white"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                <a
+                  href="https://www.linkedin.com/in/julio-bermudez-4b3742251/"
+                  class="white"
+                  ><i class="fa-brands fa-linkedin fa-2xl"></i
+                ></a>
               </div>
               <div class="col-2 white custom-responsive-icons">
-                <a href="https://www.facebook.com/profile.php?id=100008852680959&mibextid=LQQJ4d" class="white"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a
+                  href="https://www.facebook.com/profile.php?id=100008852680959&mibextid=LQQJ4d"
+                  class="white"
+                  ><i class="fa-brands fa-facebook fa-2xl"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -540,16 +564,16 @@
       </div>
     </section>
 
-<!-- Footer -->
+    
+    <!-- Footer -->
     <footer class="row mt-4">
       <div class="col-12 text-center white">
-<h6>Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2023 J.Bermudez. All Rights Reserved</h6>
+        <h6>
+          Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2023
+          J.Bermudez. All Rights Reserved
+        </h6>
       </div>
     </footer>
-
-
-
-
 
     <!-- Script -->
     <!-- Bootstrap -->
