--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div
               class="col-12 col-sm-12 col-md-12 col-lg-10 col-xl-9 col-xxl-8 text-center container"
             >
-              <p class="">
+              <p id="paragraph">
                 I am a frontend web developer. I can provide clean code and
                 pixel perfect design. I also make website more & more
                 interactive with web animations.
@@ -131,12 +131,12 @@
         </h1>
       </article>
 
-      <section class="row d-flex justify-content-center">
+      <section class="row d-flex justify-content-center custom-section-about">
         <div
           class="col-sm-12 col-lg-8 d-flex justify-content-evenly flex-wrap custom-container-about-me"
         >
           <picture
-            class="col-sm-12 col-lg-6 d-flex justify-content-center opacity-50 picMovmnt"
+            class="col-sm-12 col-lg-6 d-flex justify-content-center  picMovmnt"
           >
             <div class="custom-avatar-img-profile">
               <img src="./assets/images/IMG-2859.jpg" alt="avatar image" />
@@ -148,11 +148,8 @@
             <h1 class="white mb-3 mt-4">Hi there!, I am J. Bermudez</h1>
             <h4 class="warning mb-3">Visual Designer</h4>
 
-            <p class="grey">
-              I am a Visual Designer with a strong focus on digital branding. My
-              visual designs seeks to attract, inspire, create desires and
-              motivate people to respond to messages, with a view to making a
-              favorable impact.
+            <p class="white">
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut mollitia recusandae et earum perferendis non magnam numquam porro ullam laudantium!
             </p>
             <br />
             <ul class="grey">
@@ -169,11 +166,30 @@
               <li>Freelance : <span class="warning">Available</span></li>
             </ul>
             <br />
-            <div class="col-sm-12 d-flex justify-content-center">
-              <button class="btn" id="btnResume">
+            <section class="d-flex flex-wrap justify-content-between">
+            <div class="col-sm-6 ">
+              <button
+                class="btn"
+                id="btnResume"
+              >
                 <span>WATCH MY CV</span>
-              </button>
+            </button>
+
+          
             </div>
+            <!-- <div class="col-4 col-sm-4 col-md-4 col-lg-6 col-xl-4 col-xxl-3">
+              <a
+                class="btn"
+                id="btnDownload"
+                type="application/octet-stream"
+                target="_blank"
+                download="Resume Julio Bermudez Web Developer.pdf"
+                href="./assets/others/Resume Julio Bermudez Web Developer.pdf"
+              >
+                <span>DOWNLOAD CV</span>
+              </a>          
+            </div> -->
+          </section>
           </article>
         </div>
       </section>
@@ -344,7 +360,7 @@
           </div>
           <!-- 4 -->
           <div class="col-12 d-flex white">
-            <h6 class="col-10">Problem-solving</h6>
+            <h6 class="col-10">Express.js</h6>
             <h6 class="text-end col-2" id="num7" data-count="75"></h6>
             <h6 class="col-1">%</h6>
           </div>
@@ -482,7 +498,12 @@
             ></textarea>
           </div>
 
-          <button class="btn" type="submit" id="btnSubmitEmail" style="margin-bottom: 50px">
+          <button
+            class="btn"
+            type="submit"
+            id="btnSubmitEmail"
+            style="margin-bottom: 50px"
+          >
             <span><a href="mailto: julioph0n3@gmail.com">Send Message</a></span>
           </button>
         </form>
@@ -564,7 +585,6 @@
       </div>
     </section>
 
-    
     <!-- Footer -->
     <footer class="row mt-4">
       <div class="col-12 text-center white">
