--- a/index.html
+++ b/index.html
@@ -405,12 +405,12 @@
             class="col-10 col-sm-10 col-lg-12 d-flex justify-content-center custom-movement-div"
             style="margin-bottom: 30px; height: 300px"
           >
-            <img
-              src="https://elements-cover-images-0.imgix.net/5e9e5ac6-0af0-4bf4-9cc8-ceaf6afca7e6?auto=compress%2Cformat&fit=max&w=1370&s=449d34fd8f969758445b251800abb996"
+            <a href="https://movemate-rt-f78ed739ac18.herokuapp.com/" style="width: 100%;height: 100%;"><img
+              src="../assets/images/movemate.png"
               class="position-relative"
               alt=""
-            />
-            <section class="position-absolute"><h3>Coming soon</h3></section>
+            /></a>
+            <section class="position-absolute d-none"><h3>Coming soon</h3></section>
           </div>
           <div
             class="col-10 col-sm-10 col-lg-4 d-flex justify-content-center custom-movement-div"
