--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             style="margin-bottom: 30px; height: 300px"
           >
             <a href="https://movemate-rt-f78ed739ac18.herokuapp.com/" style="width: 100%;height: 100%;"><img
-              src="../assets/images/movemate.png"
+              src="./assets/images/movemate.png"
               class="position-relative"
               alt=""
             /></a>
