--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
             ></i>
             <h5 class="col-3">Location:</h5>
             <h6 class="col-7 grey" style="margin-top: 3px">
-              576 Nw 114th Ave, Fontainebleau, FL 33172
+              Miami
             </h6>
           </div>
           <div class="col-12 d-flex flex-wrap justify-content-center white">
