--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <br />
               <li>Email : julioph0n3@gmail.com</li>
               <br />
-              <li>From : 576 Nw 114th Ave, Fl 33172</li>
+              <li>From : Miami</li>
               <br />
               <li>Language : English, Spanish</li>
               <br />
